syntax = "proto3";

option csharp_namespace = "FaceRecognition.gRPC.Web";
option java_generic_services = true;
//option java_multiple_files = true;
option java_package = "grpc.proto.faceRecog";

package faceRecognition;

// The faceRecognition service definition.
service FaceRecognitionSvc {
  // Sends a greeting
  rpc PerformRecognition(stream BytesRequest) returns (RecognizedFaces);
}

// The request message containing the stream of bytes.
message BytesRequest {
  bytes data = 1;
}

// The response message containing stringified result of recognition.
message RecognizedFaces {
  string message = 1;
}